fix width & height

--- a/meditation1.html
+++ b/meditation1.html
@@ -7,10 +7,11 @@
 <style type="text/css">
 .box
 {
-    height: 300px;
-    width: 300px;
+    height: 100%;
+    width: 100%;
 }
-.main {
+html,.main {
+	height: 100%;
 	background: #000;
 	color: #fff;
 }
