--- a/meditation1.html
+++ b/meditation1.html
@@ -10,7 +10,7 @@
     height: 100%;
     width: 100%;
 }
-html,.main {
+html,body {
 	height: 100%;
 	background: #000;
 	color: #fff;
@@ -21,7 +21,7 @@ html,.main {
 
 	
 </head>
-<body class="main">
+<body>
 	
 	<div class="setting">
 	<p>
